# pgs

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CLI_SPEC.md  MCP_SERVER.md
hooks/: hooks.json
scripts/: install-binary.sh  run-pgs-mcp.sh
skills/git-commit-staging/: SKILL.md
src/: error.rs  lib.rs  main.rs  models.rs
src/cmd/: commit.rs  log.rs  mcp_adapter.rs  mod.rs  overview.rs  plan_check.rs  plan_diff.rs  scan.rs  split.rs  stage.rs  status.rs  unstage.rs
src/git/: diff.rs  mod.rs  repo.rs  staging.rs  unstaging.rs
src/mcp/: contract.rs  mod.rs  runtime.rs  server.rs
src/output/: json.rs  mod.rs  text.rs  view.rs
src/safety/: backup.rs  lock.rs  mod.rs
src/selection/: mod.rs  parse.rs  resolve.rs
tests/: test_commit.rs  test_e2e.rs  test_log.rs  test_mcp_adapter.rs  test_mcp_commit_tool.rs  test_mcp_scan_tool.rs  test_mcp_stage_tool.rs  test_mcp_status_tool.rs  test_mcp_stdio.rs  test_mcp_tasks.rs  test_mcp_unstage_tool.rs  test_mode_change.rs  test_output_modes.rs  test_overview.rs  test_plan_check.rs  test_plan_diff.rs  test_scan.rs  test_skill_capability_table.rs  test_split_hunk.rs  test_stage.rs  test_stage_preview.rs  test_status.rs  test_symlink_staging.rs  test_unstage.rs  test_workdir_layouts.rs
tests/common/: mod.rs
tests/manual/: symlink_audit.sh  symlink_repro.sh
