[package]
name = "pgs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Non-interactive git staging at file, hunk, and line granularity"
license = "MIT"
repository = "https://github.com/UtsavBalar1231/pgs"
homepage = "https://github.com/UtsavBalar1231/pgs"
readme = "README.md"
keywords = ["git", "staging", "cli", "ai", "agent"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".omc/", "docs/INITIAL_IDEA.md", ".claude/"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
similar = "2"
rmcp = { version = "1.2", default-features = false, features = ["server", "transport-io"] }
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
proptest = "1"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
option_if_let_else = "allow"
too_many_lines = "allow"
missing_panics_doc = "allow"
